# Ouroboros

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TASK_CRYPTO.md  TASK_DERIVE.md  TASK_ETHERSYNC.md  TASK_REFACTOR_HANDSHACKE.md  client.html  deny.toml  paperQR.md  push_to_github.sh
.github/workflows/: ci.yml  fuzz.yml  nightly.yml  perf.yml  release.yml  security.yml  ui.yml  wasm.yml
docs/: FEATURES_TESTING.md  architecture.md  biblico.md  casestudy.md  discovery_dht.md  error_model.md  feature_flags.md  formal_methods.md  future.md  fuzzing.md  gui_flows.md  perf_baseline_windows.json  performance.md  pluggable_integration.md  release_process.md  release_provenance.md  state_of_the_art_checklist.md  testing.md  threat_model_visibility.md  transport_matrix.md  wasm.md
docs/notes/: omar.md  piano_operativo_completo.txt  riassunto.md
ethersync/: Cargo.toml  README.md
ethersync/examples/: demo_publish_subscribe.rs
ethersync/src/: coordinate.rs  erasure_coding.rs  gossip.rs  lib.rs  message.rs  network.rs  node.rs  storage.rs
ethersync/tests/: e2e_gossip_test.rs  integration_test.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_frame_len.rs  fuzz_offer_decode.rs  fuzz_protocol_and_cipher.rs
ouroboros-crypto/: Cargo.toml
ouroboros-crypto/src/: aead.rs  derive.rs  hash.rs  kdf.rs  lib.rs  pq.rs  random.rs
src/: api.rs  api_offer.rs  chunk.rs  config.rs  crypto.rs  derive.rs  discovery.rs  lib.rs  main.rs  offer.rs  onion.rs  phrase.rs  prelude.rs  protocol.rs  protocol_assist.rs  protocol_assist_v5.rs  resume.rs  session_noise.rs  state.rs
src/api/: auth.rs  connect.rs  connect_helpers.rs  diagnostics.rs  ethersync.rs  phrase.rs  pluggable.rs  session.rs  stream.rs  sync.rs  types.rs
src/cli/: mod.rs  onionize.rs
src/crypto/: post_quantum.rs  replay.rs
src/discovery/: kad.rs
src/security/: mod.rs  rate_limiting.rs  time_validation.rs
src/state/: connection_manager.rs  metrics.rs
src/tor/: managed.rs
src/transport/: assist_inbox.rs  dandelion.rs  framing.rs  guaranteed.rs  ice.rs  icmp_hole_punch.rs  io.rs  lan.rs  mod.rs  multipath.rs  nat_detection.rs  noise_tun.rs  pluggable.rs  quic_rfc9000.rs  stealth.rs  stun.rs  tasks.rs  tcp_hole_punch.rs  wan.rs  wan_assist.rs  wan_direct.rs  wan_tor.rs  webrtc.rs
src/transport/pluggable/: http2_mimic.rs  mimicry.rs  quic_mimic.rs  real_tls.rs  ws_mimic.rs
src/transport/wan_assist/: coordination.rs
tests/: api_ethersync_http.rs  ethersync_file_transfer.rs  high_level_crypto.rs  high_level_noise.rs  high_level_offer.rs  high_level_quic.rs  high_level_webrtc.rs  property_crypto_invariants.rs
tests/integration/: multipath_test.rs
ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/scripts/: lint.mjs  test-smoke.mjs
ui/src/: App.tsx  styles.css
ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: make_icon.py
ui/src-tauri/src/: main.rs
ui/src/components/: ConsolePanel.tsx  ModeSelector.tsx  PhaseBar.tsx  TopBar.tsx  WizardSteps.tsx
ui/src/features/app/: AppView.tsx  model.ts  stateSlices.ts
ui/src/hooks/: useLogs.ts  useSSE.ts
