[package]
name = "handshacke"
version = "0.1.0"
edition = "2021"
description = "Deterministic P2P communication without servers"
license = "MIT"
authors = ["Bossman"]

[dependencies]
subtle = "2.5"
libc = "0.2"
socket2 = { version = "0.5", features = ["all"] }
# Runtime
tokio = { version = "1.37", features = ["full", "macros", "rt-multi-thread"] }
tokio-util = "0.7"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Crypto & Derivation
hkdf = "0.12"
sha2 = "0.10"
sha1 = "0.10"
chacha20poly1305 = "0.10"
chacha20 = "0.9"
x25519-dalek = { version = "2.0", features = ["static_secrets", "reusable_secrets"] }
aead = "0.5"
rand = "0.8"
blake3 = "1.5"
ouroboros-crypto = { path = "./ouroboros-crypto" }
ethersync = { path = "./ethersync" }
pqcrypto-kyber = { version = "0.8", optional = true }
pqcrypto-traits = { version = "0.3", optional = true }
zeroize = { version = "1.7", features = ["zeroize_derive"] }
hmac = "0.12"
secrecy = "0.8"
unicode-normalization = "0.1"
bytes = { version = "1.6", optional = true }
rcgen = { version = "0.12", optional = true }
quinn = { version = "0.11", optional = true }
webrtc = { version = "0.14", optional = true }

# Network (UPnP, NAT-PMP, TUN)
igd = "0.12"
natpmp = "0.5"
tun = "0.6"
tokio-socks = "0.5"  # Tor SOCKS5 support

# API Server
axum = { version = "0.7", features = ["macros", "query", "form", "json"] }
hyper = { version = "1.0", features = ["server"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Noise Protocol
snow = { version = "0.9" }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
if-addrs = "0.13"  # For local IP discovery
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"
lru_time_cache = "0.11"
async-stream = "0.3"
async-trait = "0.1"
once_cell = "1.20"
hex = "0.4"
scopeguard = "1.2"
x509-parser = "0.16"
libp2p = { version = "0.56", optional = true, default-features = false, features = ["kad", "tokio", "tcp", "noise", "yamux", "macros"] }

# Client CLI HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls", "socks"] }

# Real TLS for DPI evasion
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "0.26"
tokio-rustls = "0.26"
rustls-pemfile = "2.0"

[[bin]]
name = "handshacke"
path = "src/main.rs"

[[bin]]
name = "hs-cli"
path = "src/bin/cli.rs"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = "z"

[profile.dev]
debug = 2

[dev-dependencies]
proptest = "1.4"

[features]
default = ["quic"]
full = ["quic", "webrtc", "pq"]
quic = ["dep:quinn", "dep:rcgen"]
webrtc = ["dep:webrtc", "dep:bytes"]
pq = ["dep:pqcrypto-kyber", "dep:pqcrypto-traits", "snow/hfs", "snow/pqclean_kyber1024"]
dht = ["dep:libp2p"]

[workspace]
members = [ "ethersync","ouroboros-crypto"]
