[package]
name = "ouroboros-crypto"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Cryptographic primitives and derivation utilities for Handshacke"

[dependencies]
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
blake3 = "1.5"
argon2 = "0.5"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
thiserror = "1.0"
unicode-normalization = "0.1"
pqcrypto-kyber = { version = "0.8", optional = true }
pqcrypto-traits = { version = "0.3", optional = true }
getrandom = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
default = []
post-quantum = ["dep:pqcrypto-kyber", "dep:pqcrypto-traits"]
