[package]
name = "handshacke-ui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
getrandom = "0.2"

# Tauri
tauri = { version = "2", features = [] }

tauri-plugin-shell = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
